Carrousel cards funcional en Home

--- a/home.html
+++ b/home.html
@@ -105,70 +105,56 @@
                     <div class="swiper-slide">
                         <div class="icon icon-prev">
                             <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10Zm2.03-13.53a.75.75 0 0 1 0 1.06L11.56 12l2.47 2.47a.75.75 0 1 1-1.06 1.06l-3-3a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"/></svg> -->
                         </div>
                         <div class="game-img">
                             <img src="./images/DESTACADOS/avengers.jpg" alt="Juego destacado 2">
                         </div>
                         <div class="icon icon-next">
                             <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10ZM9.97 8.47a.75.75 0 0 1 1.06 0l3 3a.75.75 0 0 1 0 1.06l-3 3a.75.75 0 1 1-1.06-1.06L12.44 12L9.97 9.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"/></svg> -->
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="icon icon-prev">
                             <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10Zm2.03-13.53a.75.75 0 0 1 0 1.06L11.56 12l2.47 2.47a.75.75 0 1 1-1.06 1.06l-3-3a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"/></svg> -->
                         </div>
                         <div class="game-img">
                             <img src="./images/DESTACADOS/artofheist.jpg" alt="Juego destacado 3">
                         </div>
                         <div class="icon icon-next">
                             <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10ZM9.97 8.47a.75.75 0 0 1 1.06 0l3 3a.75.75 0 0 1 0 1.06l-3 3a.75.75 0 1 1-1.06-1.06L12.44 12L9.97 9.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"/></svg> -->
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="icon icon-prev">
                             <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10Zm2.03-13.53a.75.75 0 0 1 0 1.06L11.56 12l2.47 2.47a.75.75 0 1 1-1.06 1.06l-3-3a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"/></svg> -->
                         </div>
                         <div class="game-img">
                             <img src="./images/DESTACADOS/cuatroenlinea.jpg" alt="Juego destacado 4">
                         </div>
                         <div class="icon icon-next">
                             <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10ZM9.97 8.47a.75.75 0 0 1 1.06 0l3 3a.75.75 0 0 1 0 1.06l-3 3a.75.75 0 1 1-1.06-1.06L12.44 12L9.97 9.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"/></svg> -->
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="icon icon-prev">
                             <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10Zm2.03-13.53a.75.75 0 0 1 0 1.06L11.56 12l2.47 2.47a.75.75 0 1 1-1.06 1.06l-3-3a.75.75 0 0 1 0-1.06l3-3a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd"/></svg> -->
                         </div>
                         <div class="game-img">
                             <img src="./images/DESTACADOS/mario-bros.jpg" alt="Juego destacado 5">
                         </div>
                         <div class="icon icon-next">
                             <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10ZM9.97 8.47a.75.75 0 0 1 1.06 0l3 3a.75.75 0 0 1 0 1.06l-3 3a.75.75 0 1 1-1.06-1.06L12.44 12L9.97 9.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"/></svg> -->
                         </div>
                     </div>
                 </div>
             </div>
-           
-            <div class="container-carrousel">
-                <div>
-                    <h3>Acción</h3>
-                </div>
-                <div class="carrousel">
-                    <h3>Cartas</h3>
-                    <div class="carrousel-cards carrousel-list" id="carrousel-cards">
-                        <div class="carrousel-arrow carrousel-prev" id="btn-prev" data-button="btn-prev" onclick="app.processingButton(event)">
-                            <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
-                        </div>
+
+            <div class="container-carrousel" id="wrapper">
+                <h3>Cartas</h3>
+                <div class="carrousel" id="carrousel">
+                    <div class="carrousel-cards" id="carrousel-cards">
                         <div class="carrousel-track" id="track">
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Chinchón</h3>
@@ -179,7 +165,7 @@
                                 </div>
                                 <button class="btn btn-jugar">Jugar</button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Solitario</h3>
@@ -190,7 +176,7 @@
                                 </div>
                                 <button class="btn btn-jugar">Jugar</button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Spider</h3>
@@ -207,7 +193,7 @@
                                     <span>Agregar</span>
                                 </button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Uno</h3>
@@ -218,7 +204,7 @@
                                 </div>
                                 <button class="btn btn-agregado">Agregado</button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Monopoly</h3>
@@ -229,7 +215,7 @@
                                 </div>
                                 <button class="btn btn-jugar">Jugar</button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Truco</h3>
@@ -240,7 +226,7 @@
                                 </div>
                                 <button class="btn btn-jugar">Jugar</button>
                             </div>
-                            <div class="card">
+                            <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
                                         <h3>Poker</h3>
@@ -257,12 +243,44 @@
                                     <span>Agregar</span>
                                 </button>
                             </div>
-                        </div>
-                        <div class="carrousel-arrow carrousel-next" id="btn-next" data-button="btn-prev" onclick="app.processingButton(event)">    
-                            <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Duo con amigos</h3>
+                                        <hr class="card-hr">
+                                        <p>DUO con amigos es una variación avanzada del clásico UNO, con nuevos torneos, reglas, modos de juego, cartas especiales y mucho más. A diferencia del UNO clásico, DUO With Friends permite que haya espacio para hasta 8 jugadores en una partida online.</p>
+                                    </div>
+                                    <img src="images/CARTAS/duo.jpg" alt="Duo" class="img">
+                                </div>
+                                <button class="btn btn-agregar">
+                                    <div class="btn-agregar-icono">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                        <i class="fa-solid fa-cart-shopping"></i>
+                                    </div>
+                                    <span>Agregar</span>
+                                </button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Pyramid Solitaire Blue</h3>
+                                        <hr class="card-hr">
+                                        <p>Pyramid Solitaire Blue trae la popular versión Pyramid del Solitario a la palma de tu mano. Pyramid Solitaire Blue garantiza diversión y estimulación mental durante horas. Combinado con los gráficos altamente pulidos por los que son conocidos los juegos de Solitario de Softgames, ¡este es un juego imprescindible para todos los jugadores de Solitario!</p>
+                                    </div>
+                                    <img src="images/CARTAS/pyramid-solitaire.jpg" alt="Pyramid Solitaire Blue" class="img">
+                                </div>
+                                <button class="btn btn-agregado">Agregado</button>
+                            </div>
                         </div>
                     </div>
+                    <div class="carrousel-arrow arrow-prev" id="prev">
+                        <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
+                    </div>
+                    <div class="carrousel-arrow arrow-next" id="next">
+                        <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
+                    </div>
                 </div>
+
                 <div>
                     <h3>Carreras</h3>
 
