Carrousels 1 y 2 funcionales, falta pos de flechas

--- a/home.html
+++ b/home.html
@@ -151,9 +151,9 @@
 
             <div class="container-carrousel" id="wrapper">
                 <h3>Cartas</h3>
-                <div class="carrousel" id="carrousel">
+                <div class="carrousel" id="carrousel-1">
                     <div class="carrousel-cards" id="carrousel-cards">
-                        <div class="carrousel-track" id="track">
+                        <div class="carrousel-track" id="track-1">
                             <div class="card" id="card">
                                 <div class="card-img">
                                     <div class="card-hover">
@@ -273,17 +273,143 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carrousel-arrow arrow-prev" id="prev">
+                    <div class="carrousel-arrow arrow-prev" id="prev-1">
                         <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
                     </div>
-                    <div class="carrousel-arrow arrow-next" id="next">
+                    <div class="carrousel-arrow arrow-next" id="next-1">
                         <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
                     </div>
                 </div>
 
-                <div>
-                    <h3>Carreras</h3>
-
+                <h3>Carreras</h3>
+                <div class="carrousel" id="carrousel-2">
+                    <div class="carrousel-cards" id="carrousel-cards">
+                        <div class="carrousel-track" id="track-2">
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Chinchón</h3>
+                                        <hr class="card-hr">
+                                        <p>Juego de cartas cuyo objetivo es combinar tus 7 cartas en series de escaleras del mismo palo o en grupos de 3 o más cartas</p>
+                                    </div>
+                                    <img src="images/CARTAS/Chinchón.jpg" alt="Chinchón" class="img">
+                                </div>
+                                <button class="btn btn-jugar">Jugar</button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Solitario</h3>
+                                        <hr class="card-hr">
+                                        <p>Es un juego de cartas en el que el objetivo es apilar las cartas de la baraja en orden ascendente o descendente. ¡Asegúrate de seguir siempre con el color opuesto y diviértete!</p>
+                                    </div>
+                                    <img src="images/CARTAS/Solitario.jpg" alt="Solitario" class="img">
+                                </div>
+                                <button class="btn btn-jugar">Jugar</button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Spider</h3>
+                                        <hr class="card-hr">
+                                        <p>Para empezar a jugar, hay que saber que consta de 104 cartas y consiste en apilar las de menor valor sobre las más grandes. Las filas se forman con cartas del mismo palo y deben estar repartidas en 19 columnas y habrá algunas dadas vueltas que se irán descubriendo a medida que progrese el juego.</p>
+                                    </div>
+                                    <img src="images/CARTAS/spider.jpg" alt="Spider" class="img">
+                                </div>
+                                <button class="btn btn-agregar">
+                                    <div class="btn-agregar-icono">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                        <i class="fa-solid fa-cart-shopping"></i>
+                                    </div>
+                                    <span>Agregar</span>
+                                </button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Uno</h3>
+                                        <hr class="card-hr">
+                                        <p>Se reparten 7 cartas a cada jugador y ganará la ronda el primero que consiga deshacerse de todas antes que el resto. Estas cartas están numeradas del 1 al 9 y son de 4 colores diferentes.</p>
+                                    </div>
+                                    <img src="images/CARTAS/Uno.jpg" alt="Uno" class="img">
+                                </div>
+                                <button class="btn btn-agregado">Agregado</button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Monopoly</h3>
+                                        <hr class="card-hr">
+                                        <p>El objetivo del juego es formar un monopolio de oferta, poseyendo todas las propiedades inmuebles que aparecen en el juego.</p>
+                                    </div>
+                                    <img src="images/CARTAS/Monopoly.jpg" alt="Monopoly" class="img">
+                                </div>
+                                <button class="btn btn-jugar">Jugar</button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Truco</h3>
+                                        <hr class="card-hr">
+                                        <p>Para ganar se deben sumar una cantidad determinada de puntos, a veces se dividen en etapas.</p>
+                                    </div>
+                                    <img src="images/CARTAS/Truco.jpg" alt="Truco" class="img">
+                                </div>
+                                <button class="btn btn-jugar">Jugar</button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Poker</h3>
+                                        <hr class="card-hr">
+                                        <p>Es un juego de apuestas en el que los jugadores, con todas o parte de sus cartas ocultas, hacen apuestas sobre una puja inicial, recayendo la suma total de las apuestas en el jugador o jugadores con la mejor combinación de cartas</p>
+                                    </div>
+                                    <img src="images/CARTAS/Poker.jpg" alt="Poker" class="img">
+                                </div>
+                                <button class="btn btn-agregar">
+                                    <div class="btn-agregar-icono">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                        <i class="fa-solid fa-cart-shopping"></i>
+                                    </div>
+                                    <span>Agregar</span>
+                                </button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Duo con amigos</h3>
+                                        <hr class="card-hr">
+                                        <p>DUO con amigos es una variación avanzada del clásico UNO, con nuevos torneos, reglas, modos de juego, cartas especiales y mucho más. A diferencia del UNO clásico, DUO With Friends permite que haya espacio para hasta 8 jugadores en una partida online.</p>
+                                    </div>
+                                    <img src="images/CARTAS/duo.jpg" alt="Duo" class="img">
+                                </div>
+                                <button class="btn btn-agregar">
+                                    <div class="btn-agregar-icono">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                        <i class="fa-solid fa-cart-shopping"></i>
+                                    </div>
+                                    <span>Agregar</span>
+                                </button>
+                            </div>
+                            <div class="card" id="card">
+                                <div class="card-img">
+                                    <div class="card-hover">
+                                        <h3>Pyramid Solitaire Blue</h3>
+                                        <hr class="card-hr">
+                                        <p>Pyramid Solitaire Blue trae la popular versión Pyramid del Solitario a la palma de tu mano. Pyramid Solitaire Blue garantiza diversión y estimulación mental durante horas. Combinado con los gráficos altamente pulidos por los que son conocidos los juegos de Solitario de Softgames, ¡este es un juego imprescindible para todos los jugadores de Solitario!</p>
+                                    </div>
+                                    <img src="images/CARTAS/pyramid-solitaire.jpg" alt="Pyramid Solitaire Blue" class="img">
+                                </div>
+                                <button class="btn btn-agregado">Agregado</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carrousel-arrow arrow-prev" id="prev-2">
+                        <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
+                    </div>
+                    <div class="carrousel-arrow arrow-next" id="next-2">
+                        <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
+                    </div>
                 </div>
                 <div>
                     <h3>Clásicos</h3>
