--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <label for="password">Contraseña</label>
                         <input type="password" name="password" id="password" required>
                         <button type="submit" class="btn-submit">Continuar</button>
-                        <p>¿No tienes cuenta? <a href="#" id="signUp">Registrate</a></p>
+                        <p>¿No tienes cuenta? <a href="" id="signUp">Registrate</a></p>
                     </div>
                     <hr>
                     <div class="form-networks">
@@ -35,7 +35,7 @@
                 </form>
             </div>
             <div class="form-container form-container-signUp" id="form-container-signUp">
-                <form action="home.html" method="post" class="form form-signUp" ">
+                <form action="home.html" method="post" class="form form-signUp">
                     <h2>Registrate</h2>
                     <p>¿Ya tienes cuenta? <a href="#" id="logIn">Ingresá</a></p>
                     <div class="form-inputs">
@@ -73,6 +73,7 @@
             </div>
         </div>
     </div>
+    <script src="JS/login-signup.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
