Ultimos retoques menus desplegables

--- a/juego.html
+++ b/juego.html
@@ -14,7 +14,7 @@
                 <a type="button" class="btn-dropdown dropdown-menu" id="btn-menu">
                     <i class="fa-solid fa-bars"></i>
                 </a>
-                <ol class="dropdown-content" id="dropdown-content-menu">
+                <ol class="dropdown-content dropdown-content-menu" id="dropdown-content-menu">
                     <li> 
                         <a href="https://www.google.com.ar/?hl=es" rel="noopener">
                             <div>
@@ -87,6 +87,7 @@
                             <p>Memoria</p>
                         </a>
                     </li>
+                    <hr class="hr-nav">
                     <li> 
                         <a href="https://www.google.com.ar/?hl=es" rel="noopener">
                             <div>
