--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 <a type="button" class="btn-dropdown dropdown-menu" id="btn-menu">
                     <i class="fa-solid fa-bars"></i>
                 </a>
-                <ol class="dropdown-content" id="dropdown-content-menu">
+                <ol class="dropdown-content dropdown-content-menu" id="dropdown-content-menu">
                     <li> 
                         <a href="https://www.google.com.ar/?hl=es" rel="noopener">
                             <div>
@@ -101,6 +101,7 @@
                             <p>Memoria</p>
                         </a>
                     </li>
+                    <hr class="hr-nav">
                     <li> 
                         <a href="https://www.google.com.ar/?hl=es" rel="noopener">
                             <div>
@@ -168,6 +169,7 @@
                 </ol>
             </div>
         </nav>
+
         <div class="container">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
