Mobile first de Home terminado

--- a/home.html
+++ b/home.html
@@ -211,7 +211,9 @@
                             <i class="fa-solid fa-circle-chevron-left fa-2xl"></i>
                         </div>
                         <div class="game-img">
-                            <img src="./images/DESTACADOS/cuatroenlinea.jpg" alt="Juego destacado 4">
+                            <a href="juego.html">
+                                <img src="./images/DESTACADOS/cuatroenlinea.jpg" alt="Juego destacado 4">
+                            </a>
                         </div>
                         <div class="icon icon-next">
                             <i class="fa-solid fa-circle-chevron-right fa-2xl"></i>
@@ -845,6 +847,7 @@
             </div>
     
         </div>
+        
         <footer class="footer-content">
             <div>
                 <img src="./images/logo.png" alt="Logo" class="logo">
