--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="body-landing-page" id="body-landing-page">
         <div class="intermediateScreen">
             <div class="form-container form-container-login" id="form-container-login">
-                <form action="home.html" method="post" class="form form-login">
+                <form action="home.html" method="post" class="form form-login" id="registroLogin">
                     <h2>Iniciar sesión</h2>
                     <hr>
                     <div class="form-inputs">
@@ -24,7 +24,7 @@
                         <input type="email" name="email" id="email" required>
                         <label for="password">Contraseña</label>
                         <input type="password" name="password" id="password" required>
-                        <button type="submit" class="btn-submit">Continuar</button>
+                        <button type="submit" class="btn-submit" id="btn-submit">Continuar</button>
                         <p>¿No tienes cuenta? <a href="" id="signUp">Registrate</a></p>
                     </div>
                     <hr>
@@ -35,7 +35,7 @@
                 </form>
             </div>
             <div class="form-container form-container-signUp" id="form-container-signUp">
-                <form action="home.html" method="post" class="form form-signUp">
+                <form class="form form-signUp" id="registroForm">
                     <h2>Registrate</h2>
                     <p>¿Ya tienes cuenta? <a href="#" id="logIn">Ingresá</a></p>
                     <div class="form-inputs">
@@ -47,13 +47,13 @@
                         <input type="number" name="age" id="age" required>
                         <label for="email">Email*</label>
                         <input type="email" name="email" id="email" required>
-                        <div class="form-group" id="password-group">
-                            <label for="password">Contraseña*</label>
+                        <div class="form-group" id="password1-group">
+                            <label for="password1">Contraseña*</label>
                             <div class="form-group-input">
-                                <input type="password" name="password" class="form-input" id="password" required>
+                                <input type="password" name="password1" class="form-input" id="password1" required>
                                 <i class="fa-solid fa-circle-exclamation form-validation-state"></i>
                             </div>
-                            <p class="form-input-error">Debe contener de 4 a 12 dígitos y al menos un número, una mayúscula y un signo (!, ?, &, %)</p>
+                            <p class="form-input-error">Debe contener de 4 a 12 dígitos y al menos un número y una mayúscula</p>
                         </div>
                         <div class="form-group" id="password2-group">
                             <label for="password2">Repetir contraseña*</label>
@@ -65,7 +65,7 @@
                         </div>
                         <img src="./images/captcha.jpg" alt="Captcha" class="img-captcha">
                         <div class="form-group">
-                            <button type="submit" class="btn-submit" onsubmit="validatePassword2()">Registrate</button>
+                            <button type="submit" class="btn-submit">Registrate</button>
                             <p class="success-msg" id="success-msg">Formulario enviado exitosamente!</p>
                         </div>
                     </div>
