--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="body-landing-page" id="body-landing-page">
         <div class="intermediateScreen">
             <div class="form-container form-container-login" id="form-container-login">
-                <form action="home.html" method="post" class="form form-login" id="registroLogin">
+                <form class="form form-login" id="registroLogin">
                     <h2>Iniciar sesión</h2>
                     <hr>
                     <div class="form-inputs">
