Primera version juego

--- a/juego.html
+++ b/juego.html
@@ -163,14 +163,7 @@
                 <p>4 en linea</p>
             </div>
             <!-- espacio de juego -->
-            <div class="container-juego">
-                <div class="juego">
-                    <img src="images/4 EN LINEA/juego.jpeg" alt="Juego">
-                </div>
-                <div class="juego-pantalla-intermedia">
-                    <button>Jugar</button>
-                </div>
-            </div>
+            <canvas id="canvas" width="1200" height="600"></canvas>
             <!-- slider de juego -->
             <div class="slider-juego">
                 <ul class="slide-track-juego">
@@ -341,6 +334,14 @@
             </div>
         </footer>
     </div>
-    <script src="main.js"></script>
+
+    <script src="js/juego/Figure.js"></script>
+	<script src="js/juego/Circle.js"></script>
+	<script src="js/juego/Rect.js"></script>
+	<script src="js/juego/Tablero.js"></script>
+	<script src="js/juego/Juego.js"></script>
+	<script src="js/juego/Jugador.js"></script>
+    <script src="js/juego/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
