--- a/home.html
+++ b/home.html
@@ -889,8 +889,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="main.js"></script>
-    <script src="JS/carrousels.js"></script>
-    <script src="JS/loading.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/carrousels.js"></script>
+    <script src="js/loading.js"></script>
 </body>
 </html> 
