--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <script src="JS/login-signup.js"></script>
-    <script src="main.js"></script>
+    <script src="js/login-signup.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
